--- a/web/.htaccess
+++ b/web/.htaccess
@@ -3,6 +3,7 @@
     Options -MultiViews
 
     RewriteEngine On
+    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [QSA,L]
 </IfModule>
