--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,6 +2,7 @@
 <IfModule mod_rewrite.c>
     Options -MultiViews
 
+    AllowOverride All
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
