--- a/apache_app.conf
+++ b/apache_app.conf
@@ -9,4 +9,4 @@ RewriteRule ^app\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
 RewriteCond %{REQUEST_FILENAME} -f
 RewriteRule .? - [L]
 
-RewriteRule .? %{ENV:BASE}/app.php [L]
+RewriteRule .? %{ENV:BASE}/web [L]
