--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,9 +2,11 @@
 <IfModule mod_rewrite.c>
     Options -MultiViews
 
-    AllowOverride All
     RewriteEngine On
-    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [QSA,L]
+    RewriteRule ^ index.php [QSA,L] 
 </IfModule>
+
+<Directory>
+	AllowOverride All
+</Directory>
