--- a/web/.htaccess
+++ b/web/.htaccess
@@ -5,5 +5,9 @@
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [QSA,L] 
+
+    <Directory>
+	AllowOverride All
+</Directory>
 </IfModule>
 
