--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/monolog-bridge": "~2.4",
         "opauth/opauth": ">=0.4.0",
         "ext-soap": "*",
-        "betterbrief/opauth-salesforce": "dev-master"
+        "betterbrief/opauth-salesforce": "dev-master",
+         "guzzle/guzzle": ">=2.0.0"
     },
     "autoload": {
         "psr-4": {
