--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,27 @@
 {
     "require": {
-	"silex/silex": "~1.2",
-	"doctrine/dbal": "~2.4",
-	"twig/twig": "~1.16",
-	"symfony/security": "~2.4",
-	"symfony/twig-bridge": "~2.4",
-	"symfony/form": "~2.4",
-	"symfony/translation": "~2.4",
-	"twig/extensions": "~1.2",
-	"symfony/validator": "~2.4",
-	"symfony/config": "~2.4",
-	"symfony/monolog-bridge": "~2.4",
-	"opauth/opauth": ">=0.4.0",
-	"ext-soap": "*",
-	"betterbrief/opauth-salesforce": "dev-master",
-	"guzzlehttp/guzzle": "~5.3"
+        "silex/silex": "~1.2",
+        "doctrine/dbal": "~2.4",
+        "twig/twig": "~1.16",
+        "symfony/security": "~2.4",
+        "symfony/twig-bridge": "~2.4",
+        "symfony/form": "~2.4",
+        "symfony/translation": "~2.4",
+        "twig/extensions": "~1.2",
+        "symfony/validator": "~2.4",
+        "symfony/config": "~2.4",
+        "symfony/monolog-bridge": "~2.4",
+        "opauth/opauth": ">=0.4.0",
+        "ext-soap": "*",
+        "betterbrief/opauth-salesforce": "dev-master",
+        "guzzlehttp/guzzle": "~5.3"
     },
     "autoload": {
-	"psr-4": {
-	    "skyflow\\": "src"},
-	"classmap":[
-	    "exacttarget/"]
+        "psr-4": {
+            "skyflow\\": "src"
+        },
+        "classmap": [
+            "exacttarget/"
+        ]
     }
 }
-
-
