Get around Twig incomplete class error by tweaking autoloader in composer.json

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Skyflow\\": "src\\Skyflow"
+            "skyflow\\": "src\\Skyflow"
         }
     }
 }
