--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
 {
   "name": "skyflow.io",
   "description": "Cloud ETL for Heroku",
-  "repository": "https://github.com/Sylpheo/skyflow.io",
-  "logo": "https://github.com/Sylpheo/skyflow.io/blob/master/web/images/logo.jpg",
+  "repository": "https://github.com/Sylpheo/skyflow.io"
 }
