--- a/app.json
+++ b/app.json
@@ -2,5 +2,10 @@
   "name": "skyflow.io",
   "description": "Cloud ETL for Heroku",
   "repository": "https://github.com/Sylpheo/skyflow.io"
-  "logo": "https://github.com/Sylpheo/skyflow.io/blob/master/web/images/logo.jpg"
+  "addons": [
+    "heroku-postgresql:hobby-dev"
+  ]
+  "scripts": {
+    "postdeploy": "heroku pg:psql < install.sql"
+  }
 }
