--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "name": "skyflow.io",
   "description": "Cloud ETL for Heroku",
-  "repository": "https://github.com/Sylpheo/skyflow.io"
+  "repository": "https://github.com/Sylpheo/skyflow.io",
   "addons": [
     "heroku-postgresql:hobby-dev"
-  ]
+  ],
   "scripts": {
     "postdeploy": "heroku pg:psql < install.sql"
   }
