--- a/app.json
+++ b/app.json
@@ -4,5 +4,8 @@
   "repository": "https://github.com/Sylpheo/skyflow.io",
   "addons": [
     "heroku-postgresql:hobby-dev"
-  ]
+  ],
+  "scripts": {
+    "postdeploy": "bundle exec pg:psql < install.sql"
+  }
 }
