--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "autoload": {
         "psr-4": {
             "skyflow\\": "src\\Skyflow",
+            "Salesforce\\": "src\\Salesforce",
             "Wave\\": "src\\Wave"
         }
     }
