Fix wrong Skyflow root namespace from "skyflow" to "Skyflow"

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "skyflow\\": "src\\Skyflow",
+            "Skyflow\\": "src\\Skyflow",
             "Salesforce\\": "src\\Salesforce",
             "Wave\\": "src\\Wave"
         }
