Bower components stored in web/vendor, use heroku-buildpack-multi to enable bower
Change "web/bower_components" to "web/vendor", use heroku-buildpack-multi to have both php (composer) and node.js (bower). Run bower install on composer post script. Inspired from https://github.com/dzuelke/heroku-multipack-nodejs-php-example

--- a/app.json
+++ b/app.json
@@ -4,5 +4,8 @@
   "repository": "https://github.com/Sylpheo/skyflow.io",
   "addons": [
     "heroku-postgresql:hobby-dev"
-  ]
+  ],
+  "env": {
+    "BUILDPACK_URL": "https://github.com/heroku/heroku-buildpack-multi"
+  }
 }
