--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "guzzlehttp/guzzle": "~5.3",
         "exacttarget/fuel-sdk-php": "^0.9.0"
     },
+    "require-dev": {
+        "heroku/heroku-buildpack-php": "*"
+    },
     "scripts": {
         "compile": [
             "bower install"
