--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "ext-soap": "*",
         "betterbrief/opauth-salesforce": "dev-master",
         "guzzlehttp/guzzle": "~5.3",
-        "exacttarget/fuel-sdk-php": "^0.9.0",
+        "exacttarget/fuel-sdk-php": "^0.9.0"
+    },
+    "require-dev": {
         "heroku/heroku-buildpack-php": "*"
     },
     "scripts": {
